...
        id="email"
        value={email}
        onChangeText={setEmail}
        autoCapitalize="none"
        autoComplete="email"
        keyboardType="email-address"
        placeholder="your@mail.com"
      />

      <Label htmlFor="password">{t.password}</Label>
      <PasswordField
        id="password"
        value={password}
...
